fix up wrap & msgs

--- a/www/imports/common/navBar.css
+++ b/www/imports/common/navBar.css
@@ -50,7 +50,7 @@
 }
 
 #navBar .devMessage.dev {
-    width: 21em;
+    width: 22em;
     display: inline;
     font-size: 0.8em;
     margin: 0.3em
